# Wildfire-Damage-Detection-Powered-by-Prithivi-EO-2.0

./: .gitignore  README.md  app.py  plan.md  pyproject.toml  requirements.txt
demo-data/: HLS_devil_0224_0000-post.tiff  HLS_devil_0224_0000-pre.tiff
model/: __init__.py  burn_indices.py  prithivi_model.py  processor.py
static/css/: style.css
static/js/: main.js
templates/: index.html
